k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: image-scanner
  name: image-scanner
  namespace: tks-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-scanner
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: image-scanner
    spec:
      containers:
      - image: gcr.io/totvs-kubernetes-service/runtime-image-scanner:v0.0.1
        imagePullPolicy: IfNotPresent
        name: runtime-image-scanner
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
