k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: image-scanner
  name: image-scanner
  namespace: tks-system
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: image-scanner
  type: ClusterIP
